[WebAssembly SIMD] Vector XOR instructions fail SIMDLane assertion on Intel https://bugs.webkit.org/show_bug.cgi?id=249040 rdar://103189570

Reviewed by Justin Michaud.

Passes an explicit v128 SIMDLane when constructing VectorXor instructions in
AirIRGenerator to implement vectorized comparisons on Intel.

* Source/JavaScriptCore/wasm/WasmAirIRGenerator64.cpp:
(JSC::Wasm::AirIRGenerator64::addSIMDRelOp):

Canonical link: https://commits.webkit.org/257814@main